--- a/public/footer.html
+++ b/public/footer.html
@@ -16,11 +16,19 @@
           <div class="footer-left">
             <img src="../images/logo_500x500.png" alt="LogoMIU" />
             <div class="socials">
-              <a href="#">
-                <img src="../images/icon-facebook.png" alt="Facebook" />
+              <a href="https://www.facebook.com/">
+                <img
+                  style="width: 20%"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Facebook_logo_36x36.svg/1024px-Facebook_logo_36x36.svg.png"
+                  alt="Facebook"
+                />
               </a>
-              <a href="#">
-                <img src="../images/icon-instagram.png" alt="Instagram" />
+              <a href="https://www.instagram.com/?hl=vi">
+                <img
+                  style="width: 20%"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Instagram_logo_2016.svg/1200px-Instagram_logo_2016.svg.png"
+                  alt="Instagram"
+                />
               </a>
             </div>
           </div>
