--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -124,7 +124,7 @@
         </div>
       </div>
     </li>
-    <li><a href="#">Blogs</a></li>
+    <li><a href="./blog.html">Blogs</a></li>
     <li><a href="./contact.html">Contact Us</a></li>
   </ul>
   <div class="signin">
