--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <div id="header" class="row header">
         <nav-bar></nav-bar>
       </div>
-      <div class="carousel row" style="z-index: -1">
+      <div class="carousel row" style="z-index: -1; margin-top: 5%">
         <div class="slideshow-container">
           <div class="mySlides fade centered-content">
             <div class="numbertext">1 / 3</div>
