--- a/public/blogdetail.html
+++ b/public/blogdetail.html
@@ -46,15 +46,63 @@
             />
             <p><label>LIFE STYLE</label></p>
             <h4>
-              <b>{{blogs[0].author}}</b>
+              <b>Nhat Han</b>
               <span style="font-weight: normal; margin-left: 1em"
-                >{{blogs[0].date}}</span
+                >22/12/2020</span
               >
             </h4>
-            <h2>{{blogs[0].title}}</h2>
-            <p style="line-height: 2.5">
-              {{blogs[0].detail}}<br />{{blogs[0].detail.substring(0,500)}}
+            <h2>Title 1</h2>
+            <p style="line-height: 1.5">
+              Diga, Koma and Torus are three kitchen utensils designed for Ommo,
+              a new design-oriented brand introduced at the Ambiente show in
+              February 2016. Minimalist approach, bright colors, stainless steel
+              and matte plastic, abstract shapes and curved lines are the
+              defining features of these products designed to be extremely
+              functional, user-friendly and fun.
             </p>
+            <p style="margin-top: 3rem; line-height: 1.5">
+              Diga is a two-color melamine salad bowl where vegetables can be
+              washed, drained and served. The disk at the bottom of the bowl can
+              be turned counterclockwise to drain water when washing vegetables
+              and it can be turned clockwise to lock the drain and hold
+              condiments in the bowl when serving.
+            </p>
+            <p
+              style="
+                margin-top: 3rem;
+                line-height: 1.5;
+                border-left: 0.3rem solid #ba933e;
+                padding-left: 1rem;
+                font-size: large;
+              "
+            >
+              Many desktop publishing packages and web page editors now use
+              Lorem Ipsum as their default model text, and a search for 'lorem
+              ipsum' will uncover many web sites still in their infancy.
+            </p>
+            <img
+              src="https://cdn.shopify.com/s/files/1/1573/5553/files/21_Blog-post.jpg?v=1510022321"
+            />
+            <p style="margin-top: 3rem; line-height: 1.5">
+              Diga is a two-color melamine salad bowl where vegetables can be
+              Koma and Torus are two tea infusers, each with an original design
+              and a concealed function. Koma has a round base and a long
+              stainless steel-trimmed handle which offers a comfortable grip and
+              allows.
+            </p>
+            <p style="margin-top: 3rem; line-height: 1.5">
+              And the brushed steel cover opens and closes at the touch of a
+              finger to easily fill and empty the infuser. The perfect way to
+              enjoy brewing tea. Torus is donut-shaped and can cling to any cup.
+              It is accompanied by a case that can contain up to three different
+              diffusers and can be used for dry storage of loose tea.
+            </p>
+            <div>
+              <hr/>
+              <h4>Tags: <span><a style="font-weight: lighter;">Apps, Conference, Developers, Enterprise, Startups</a></span></h2>
+            
+              <hr />
+            </div>
           </div>
         </div>
         <div class="blog__body__sidebar">
