--- a/public/blog.html
+++ b/public/blog.html
@@ -55,7 +55,10 @@
             </h4>
             <h2>{{dt.title}}</h2>
             <p>{{dt.detail}}</p>
-            <button id="btnClick" onclick="window.location='/blogdetail.html';">
+            <button
+              id="btnClick"
+              onclick="window.location='./blogdetail.html';"
+            >
               Read More >
             </button>
           </div>
