--- a/public/collection_site.html
+++ b/public/collection_site.html
@@ -38,7 +38,9 @@
           <img class="item" src="{{cl.image}}" />
           <h1 class="item">{{cl.name}}</h1>
           <p class="item">{{cl.quantity}} products</p>
-          <button class="item">SHOP THE COLLECTION</button>
+          <button class="item" onclick="window.location.href='/shop.html';">
+            SHOP THE COLLECTION
+          </button>
         </div>
       </div>
     </div>
