--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -1,6 +1,11 @@
 <div class="top-comp">
   <div align="center" class="logo">
-    <img id="hamburger" src="./images/menu.svg" alt="hambuger icon" />
+    <img
+      id="hamburger"
+      class="burger"
+      src="./images/menu.svg"
+      alt="hambuger icon"
+    />
     <a href="./">
       <img src="./images/logo.png" alt="logo" />
     </a>
