--- a/public/shipping.html
+++ b/public/shipping.html
@@ -168,7 +168,9 @@
                 <tr style="height: 50px">
                   <td>
                     <button class="buttonBT" id="btnContinue">
-                      Continue your shopping
+                      <a href="./index.html" style="color: white"
+                        >Continue your shopping</a
+                      >
                     </button>
                   </td>
                 </tr>
