--- a/public/navigationbar.html
+++ b/public/navigationbar.html
@@ -1,6 +1,8 @@
+<script type="text/javascript" src="./functions/drawer.js"></script>
 <div class="top-comp">
   <div align="center" class="logo">
     <img
+      onclick="navSlide()"
       id="hamburger"
       class="burger"
       src="./images/menu.svg"
