--- a/public/blog.html
+++ b/public/blog.html
@@ -43,9 +43,7 @@
       <div class="blog__body">
         <div class="blog__body__list">
           <div class="blog__body__list__item" ng-repeat="dt in blogs">
-            <img
-              src="https://cdn.shopify.com/s/files/1/0276/4616/5110/articles/3_88f1294b-6888-4672-bfae-674b5c6f27fc_540x.jpg?v=1589385253"
-            />
+            <img src="{{dt.image}}" />
             <p><label>LIFE STYLE</label></p>
             <h4>
               <b>{{dt.author}}</b>
